--- a/demo/index.html
+++ b/demo/index.html
@@ -7,14 +7,14 @@
 	<title></title>
 	<meta name="description" content="">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="stylesheet" href="../dist/tobii.css">
+	<link rel="stylesheet" href="../dist/tobii.min.css">
 </head>
 
 <body>
 	<a href="https://via.placeholder.com/600.jpg" class="lightbox"><img src="https://via.placeholder.com/300.jpg" height="150" width="150"></a>
 	<a href="https://via.placeholder.com/600/09f/fff.jpg" class="lightbox"><img src="https://via.placeholder.com/300/09f/fff.jpg" height="150" width="150"></a>
 
-	<script src="../dist/tobii.js"></script>
+	<script src="../dist/tobii.min.js"></script>
 	<script>
 		const tobii = new Tobii()
 	</script>
