--- a/demo/modern.html
+++ b/demo/modern.html
@@ -7,7 +7,7 @@
 	<title></title>
 	<meta name="description" content="">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="stylesheet" href="../dist/tobii.modern.css">
+	<link rel="stylesheet" href="../dist/tobii.min.css">
 </head>
 
 <body>
