--- a/demo/modern.html
+++ b/demo/modern.html
@@ -1,23 +1,140 @@
-
 <!doctype html>
 <html lang="en">
-
 <head>
 	<meta charset="utf-8">
-	<title></title>
-	<meta name="description" content="">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<title>Tobii demo (modern)</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	<link rel="stylesheet" href="../dist/tobii.min.css">
 </head>
 
 <body>
-	<a href="https://via.placeholder.com/600.jpg" class="lightbox"><img src="https://via.placeholder.com/300.jpg" height="150" width="150"></a>
-	<a href="https://via.placeholder.com/600/09f/fff.jpg" class="lightbox"><img src="https://via.placeholder.com/300/09f/fff.jpg" height="150" width="150"></a>
+
+	<h1>
+		Tobii demo (modern)
+	</h1>
+
+
+	<p>
+		<b>Image (single):</b>
+	</p>
+
+	<a href="https://via.placeholder.com/600.jpg" class="lightbox" data-group="single">
+		<img src="https://via.placeholder.com/300.jpg" height="150" width="150" />
+	</a>
+
+
+	<p>
+		<b>Images (grouped):</b>
+	</p>
+
+	<a href="https://via.placeholder.com/600/070/eee.jpg" class="lightbox" data-group="gallery">
+		<img src="https://via.placeholder.com/300/070/eee.jpg" height="150" width="150" />
+	</a>
+	<a href="https://via.placeholder.com/600/09f/fff.jpg" class="lightbox" data-group="gallery">
+		<img src="https://via.placeholder.com/300/09f/fff.jpg" height="150" width="150" />
+	</a>
+
+
+	<br /><br />
+	<b>Inline HTML:</b>
+
+	<a href="#selector" data-type="html" class="lightbox" data-group="inline">
+		Open
+	</a>
+
+	<div id="selector" data-group="iframe">
+		HTML content. <a hred="#">Link</a> example.
+	</div>
+
+
+	<br /><br />
+	<b>Iframe:</b>
+
+	<a href="https://www.wikipedia.org" data-type="iframe" class="lightbox" data-group="iframe">
+		Open
+	</a>
+
+	<br /><br />
+	<b>YouTube: (mode: iframe):</b>
+
+	<a href="https://www.youtube.com/embed/RK1K2bCg4J8?autoplay=1" data-type="iframe" class="lightbox" data-group="iframe-youtube"
+		data-allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture">
+		Open
+	</a>
+
+
+	<p>
+		<b>YouTube: (mode: API)</b>
+	</p>
+
+	<a href="#" data-type="youtube" data-id="RK1K2bCg4J8" class="lightbox" data-group="youtube">
+		<img alt="" src="https://img.youtube.com/vi/RK1K2bCg4J8/mqdefault.jpg" />
+	</a>
+
+
+	<br /><br />
+	<b>Image with events:</b>
+
+	<a href="https://via.placeholder.com/600.jpg" class="lightbox" data-group="single-events">
+		Open
+	</a>
+
+
+	<br /><br />
+	<b>Manual call on some example link:</b>
+
+	<a href="#" id="manual">
+		Open
+	</a>
+
+	<br /><br />
+	<b>Image (not existing):</b>
+
+	<a href="https://example.org/404.jpg" class="lightbox" data-group="single-error">
+		Open
+	</a>
+
+	<br /><br />
+	<b>Iframe (not existing):</b>
+
+	<a href="https://www.wikipedia.org/404/404/404/404/" data-type="iframe" class="lightbox" data-group="iframe-error">
+		Open
+	</a>
+
+	<br /><br />
+	<b>Youtube (not existing):</b>
+
+	<a href="#" data-type="youtube" data-id="qwerty" class="lightbox" data-group="youtube-error">
+		Open
+	</a>
+
 
 	<script type="module">
 		import Tobii from '../dist/tobii.modern.js';
-		const tobii = new Tobii();
-	</script>
-</body>
 
+		//prepare manual executions
+        var manual = document.querySelector('#manual');
+        manual.classList.add('lightbox');
+        manual.href = 'https://via.placeholder.com/600.jpg';
+        manual.attributes.group = 'manual';
+
+		//init
+		const tobii = new Tobii();
+
+		//set events
+        tobii.on('open', function() {
+		  console.log('event: ' + 'open');
+        })
+        tobii.on('previous', function() {
+          console.log('event: ' + 'previous');
+        })
+        tobii.on('next', function() {
+          console.log('event: ' + 'next');
+        })
+        tobii.on('close', function() {
+          console.log('event: ' + 'close');
+        })
+	</script>
+
+</body>
 </html>
