--- a/demo/index.html
+++ b/demo/index.html
@@ -5,112 +5,158 @@
 	<title>Tobii demo</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	<link rel="stylesheet" href="../dist/tobii.min.css">
+	<style>
+		body{
+            max-width: 1000px;
+			margin: 0 auto;
+			padding: 0 20px;
+			background-color: #f5f5f7;
+		}
+		table{
+            border-collapse: collapse;
+            border-spacing: 0;
+		}
+		th{
+            text-align:left;
+		}
+		th, td{
+            padding: 5px 5px;
+		}
+		img{
+			max-width:200px;
+		}
+        .bold{
+            font-weight:bold;
+        }
+		.inline-style{
+            background:white;
+			padding:15px 20px;
+			max-width:600px;
+		}
+	</style>
 </head>
 
 <body>
 
 	<h1>
-		Tobii demo (modern)
+		Tobii demo
 	</h1>
 
+	Modes: <a class="bold" href="index.html">default</a> | <a href="modern.html">modern</a>
+	<hr />
 
-	<p>
-		<b>Image (single):</b>
-	</p>
+	<table>
+		<tr>
+			<th style="width:200px;">
+				Image (single)
+			</th>
+			<td>
+				<a href="https://img.youtube.com/vi/HHi8qOtHnhE/maxresdefault.jpg" class="lightbox" data-group="single">
+					<img src="https://img.youtube.com/vi/HHi8qOtHnhE/mqdefault.jpg" />
+				</a>
+			</td>
+		</tr>
+		<tr>
+			<th>
+				Images (grouped)
+			</th>
+			<td>
+				<a href="https://img.youtube.com/vi/spxtEt6RaS4/maxresdefault.jpg" class="lightbox" data-group="gallery">
+					<img src="https://img.youtube.com/vi/spxtEt6RaS4/mqdefault.jpg" />
+				</a>
+				<a href="https://img.youtube.com/vi/DGIXT7ce3vQ/maxresdefault.jpg" class="lightbox" data-group="gallery">
+					<img src="https://img.youtube.com/vi/DGIXT7ce3vQ/mqdefault.jpg" />
+				</a>
+				<a href="https://img.youtube.com/vi/Q8eh58Z249o/maxresdefault.jpg" class="lightbox" data-group="gallery">
+					<img src="https://img.youtube.com/vi/Q8eh58Z249o/mqdefault.jpg" />
+				</a>
+			</td>
+		</tr>
+		<tr>
+			<th>
+				Inline HTML
+			</th>
+			<td>
+				<a href="#selector" data-type="html" class="lightbox" data-group="inline">
+					Open
+				</a>
 
-	<a href="https://via.placeholder.com/600.jpg" class="lightbox" data-group="single">
-		<img src="https://via.placeholder.com/300.jpg" height="150" width="150" />
-	</a>
+				<div style="display:none;">
+					<div class="inline-style" id="selector" data-group="iframe">
+						Instrument cultivated alteration any favourable expression law far nor. Both new like tore but year. An
+						from mean on with when sing pain. Oh to as principles devonshire companions unsatiable an delightful. The
+						ourselves suffering the sincerity. Inhabit her manners adapted age certain. Debating offended at branched
+						<a href="#">striking be subjects</a>.
+					</div>
+				</div>
+			</td>
+		</tr>
+		<tr>
+			<th>
+				Iframe
+			</th>
+			<td>
+				<a href="https://www.wikipedia.org" data-type="iframe" class="lightbox" data-group="iframe">
+					Open
+				</a>
+			</td>
+		</tr>
+		<tr>
+			<th>
+				YouTube: (mode: iframe)
+			</th>
+			<td>
+				<a href="https://www.youtube.com/embed/RK1K2bCg4J8?autoplay=1" data-type="iframe" class="lightbox" data-group="iframe-youtube"
+				   data-allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture">
+					Open
+				</a>
+			</td>
+		</tr>
+		<tr>
+			<th>
+				YouTube: (mode: API)
+			</th>
+			<td>
+				<a href="#" data-type="youtube" data-id="RK1K2bCg4J8" class="lightbox" data-group="youtube">
+					Open
+				</a>
+			</td>
+		</tr>
+		<tr>
+			<th>
+				Manual call
+			</th>
+			<td>
+				<a href="#" id="manual">
+					Open
+				</a>
+			</td>
+		</tr>
+		<tr>
+			<th>
+				Image error
+			</th>
+			<td>
+				<a href="https://example.org/404.jpg" class="lightbox" data-group="single-error">
+					Open
+				</a>
+			</td>
+		</tr>
+		<tr>
+			<th>
+				Iframe error
+			</th>
+			<td>
+				<a href="https://www.wikipedia.org/404/404/404/404/" data-type="iframe" class="lightbox" data-group="iframe-error">
+					Open
+				</a>
+			</td>
+		</tr>
+	</table>
 
 
-	<p>
-		<b>Images (grouped):</b>
-	</p>
-
-	<a href="https://via.placeholder.com/600/070/eee.jpg" class="lightbox" data-group="gallery">
-		<img src="https://via.placeholder.com/300/070/eee.jpg" height="150" width="150" />
-	</a>
-	<a href="https://via.placeholder.com/600/09f/fff.jpg" class="lightbox" data-group="gallery">
-		<img src="https://via.placeholder.com/300/09f/fff.jpg" height="150" width="150" />
-	</a>
-
-
-	<br /><br />
-	<b>Inline HTML:</b>
-
-	<a href="#selector" data-type="html" class="lightbox" data-group="inline">
-		Open
-	</a>
-
-	<div id="selector" data-group="iframe">
-		HTML content. <a hred="#">Link</a> example.
-	</div>
-
-
-	<br /><br />
-	<b>Iframe:</b>
-
-	<a href="https://www.wikipedia.org" data-type="iframe" class="lightbox" data-group="iframe">
-		Open
-	</a>
-
-	<br /><br />
-	<b>YouTube: (mode: iframe):</b>
-
-	<a href="https://www.youtube.com/embed/RK1K2bCg4J8?autoplay=1" data-type="iframe" class="lightbox" data-group="iframe-youtube"
-		data-allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture">
-		Open
-	</a>
-
-
-	<p>
-		<b>YouTube: (mode: API)</b>
-	</p>
-
-	<a href="#" data-type="youtube" data-id="RK1K2bCg4J8" class="lightbox" data-group="youtube">
-		<img alt="" src="https://img.youtube.com/vi/RK1K2bCg4J8/mqdefault.jpg" />
-	</a>
-
-
-	<br /><br />
-	<b>Image with events:</b>
-
-	<a href="https://via.placeholder.com/600.jpg" class="lightbox" data-group="single-events">
-		Open
-	</a>
-
-
-	<br /><br />
-	<b>Manual call on some example link:</b>
-
-	<a href="#" id="manual">
-		Open
-	</a>
-
-	<br /><br />
-	<b>Image (not existing):</b>
-
-	<a href="https://example.org/404.jpg" class="lightbox" data-group="single-error">
-		Open
-	</a>
-
-	<br /><br />
-	<b>Iframe (not existing):</b>
-
-	<a href="https://www.wikipedia.org/404/404/404/404/" data-type="iframe" class="lightbox" data-group="iframe-error">
-		Open
-	</a>
-
-	<br /><br />
-	<b>Youtube (not existing):</b>
-
-	<a href="#" data-type="youtube" data-id="qwerty" class="lightbox" data-group="youtube-error">
-		Open
-	</a>
-
-
-	<script type="module">
-		import Tobii from '../dist/tobii.modern.js';
+	<script src="../dist/tobii.min.js"></script>
+	<script>
 
 		//prepare manual executions
         var manual = document.querySelector('#manual');
