#24: Vimeo support, better youtube iframe support, updated demos

--- a/demo/index.html
+++ b/demo/index.html
@@ -115,10 +115,11 @@ Modes: <a class="bold" href="index.html">default</a> | <a href="modern.html">mod
       YouTube: (mode: iframe)
     </th>
     <td>
-      <a href="https://www.youtube.com/embed/RK1K2bCg4J8?autoplay=1" data-type="iframe" class="lightbox"
+      <a href="https://www.youtube.com/embed/Yds5jgqmYpE?autoplay=1" data-type="iframe" class="lightbox"
          data-group="iframe-youtube"
-         data-allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture">
-        Open
+         data-width="1120"
+         data-height="630">
+        <img alt="" src="https://img.youtube.com/vi/Yds5jgqmYpE/mqdefault.jpg" />
       </a>
     </td>
   </tr>
@@ -129,6 +130,19 @@ Modes: <a class="bold" href="index.html">default</a> | <a href="modern.html">mod
     <td>
       <a href="#" data-type="youtube" data-id="RK1K2bCg4J8" class="lightbox" data-group="youtube">
         Open
+      </a>
+    </td>
+  </tr>
+  <tr>
+    <th>
+      Vimeo:
+    </th>
+    <td>
+      <a href="https://player.vimeo.com/video/15209448?autoplay=1" data-type="iframe" class="lightbox"
+         data-group="iframe-vimeo"
+         data-width="1280"
+         data-height="720">
+        <img alt="" src="https://i.vimeocdn.com/video/91219950_1280x720" />
       </a>
     </td>
   </tr>
