#66 - retina images support

--- a/demo/modern.html
+++ b/demo/modern.html
@@ -79,6 +79,18 @@ Modes: <a href="index.html">default</a> | <a class="bold" href="modern.html">mod
     </td>
   </tr>
   <tr>
+    <th style="width: 200px;">
+      Image (retina)
+    </th>
+    <td>
+      <a href="https://via.placeholder.com/600.jpg" class="lightbox"
+         data-srcset="https://via.placeholder.com/1200.jpg 2x"
+         data-group="retina">
+        Open
+      </a>
+    </td>
+  </tr>
+  <tr>
     <th>
       Inline HTML
     </th>
