--- a/demo/modern.html
+++ b/demo/modern.html
@@ -11,6 +11,9 @@
       margin: 0 auto;
       padding: 0 20px;
       background-color: #f5f5f7;
+      font-family: Tahoma, Verdana, Arial;
+      font-size: 14px;
+      line-height: 1.3;
     }
 
     table {
@@ -32,12 +35,6 @@
 
     .bold {
       font-weight: 700;
-    }
-
-    .inline-style {
-      background: #fff;
-      padding: 15px 20px;
-      max-width: 600px;
     }
   </style>
 </head>
@@ -100,7 +97,7 @@ Modes: <a href="index.html">default</a> | <a class="bold" href="modern.html">mod
       </a>
 
       <div style="display: none;">
-        <div class="inline-style" id="selector" data-group="iframe">
+        <div id="selector" data-group="iframe">
           Instrument cultivated alteration any favourable expression law far nor. Both new like tore but year.
           An
           from mean on with when sing pain. Oh to as principles devonshire companions unsatiable an
