Use correct script name for modern demo

--- a/demo/modern.html
+++ b/demo/modern.html
@@ -200,7 +200,7 @@ Modes: <a href="index.html">default</a> | <a class="bold" href="modern.html">mod
 
 
 <script type="module">
-  import Tobii from '../dist/tobii.modern.js'
+  import Tobii from '../dist/tobii.module.js'
 
   //prepare manual executions
   let manual = document.getElementById('manual')
