#1 - Split into modules

--- a/demo/index.html
+++ b/demo/index.html
@@ -55,7 +55,7 @@ Modes: <a class="bold" href="index.html">default</a> | <a href="modern.html">mod
     </th>
     <td>
       <a href="https://img.youtube.com/vi/HHi8qOtHnhE/maxresdefault.jpg" class="lightbox" data-group="single">
-        <img alt="" src="https://img.youtube.com/vi/HHi8qOtHnhE/mqdefault.jpg"/>
+        <img alt="Aquarium" title="Aquarium view" alt="" src="https://img.youtube.com/vi/HHi8qOtHnhE/mqdefault.jpg" />
       </a>
     </td>
   </tr>
