#46 - proof that images with query parameters works fine.

--- a/demo/modern.html
+++ b/demo/modern.html
@@ -70,8 +70,8 @@ Modes: <a href="index.html">default</a> | <a class="bold" href="modern.html">mod
       <a href="https://img.youtube.com/vi/DGIXT7ce3vQ/maxresdefault.jpg" class="lightbox" data-group="gallery">
         <img alt="" src="https://img.youtube.com/vi/DGIXT7ce3vQ/mqdefault.jpg"/>
       </a>
-      <a href="https://img.youtube.com/vi/Q8eh58Z249o/maxresdefault.jpg" class="lightbox" data-group="gallery">
-        <img alt="" src="https://img.youtube.com/vi/Q8eh58Z249o/mqdefault.jpg"/>
+      <a href="https://img.youtube.com/vi/Q8eh58Z249o/maxresdefault.jpg?param=test" class="lightbox" data-group="gallery">
+        <img alt="" src="https://img.youtube.com/vi/Q8eh58Z249o/mqdefault.jpg?param=test"/>
       </a>
     </td>
   </tr>
