--- a/demo/modern.html
+++ b/demo/modern.html
@@ -114,7 +114,11 @@ Modes: <a href="index.html">default</a> | <a class="bold" href="modern.html">mod
       Iframe
     </th>
     <td>
-      <a href="https://www.wikipedia.org" class="lightbox" data-type="iframe" data-group="iframe">
+      <a href="https://www.wikipedia.org" class="lightbox"
+		 data-type="iframe"
+		 data-group="iframe"
+		 data-width="1024"
+		 data-height="576">
         Open
       </a>
     </td>
