#82 - optimization, fixed slow iframes.

--- a/demo/modern.html
+++ b/demo/modern.html
@@ -117,8 +117,8 @@ Modes: <a href="index.html">default</a> | <a class="bold" href="modern.html">mod
       <a href="https://www.wikipedia.org" class="lightbox"
 		 data-type="iframe"
 		 data-group="iframe"
-		 data-width="1024"
-		 data-height="576">
+		 data-width="1024px"
+		 data-height="576px">
         Open
       </a>
     </td>
@@ -131,8 +131,8 @@ Modes: <a href="index.html">default</a> | <a class="bold" href="modern.html">mod
       <a href="https://www.youtube.com/embed/Yds5jgqmYpE?autoplay=1" class="lightbox"
          data-type="iframe"
          data-group="iframe-youtube"
-         data-width="1120"
-         data-height="630">
+         data-width="1120px"
+         data-height="630px">
         <img alt="" src="https://img.youtube.com/vi/Yds5jgqmYpE/mqdefault.jpg" />
       </a>
     </td>
@@ -156,8 +156,8 @@ Modes: <a href="index.html">default</a> | <a class="bold" href="modern.html">mod
       <a href="https://player.vimeo.com/video/15209448?autoplay=1" class="lightbox"
          data-type="iframe"
          data-group="iframe-vimeo"
-         data-width="1280"
-         data-height="720">
+         data-width="1280px"
+         data-height="720px">
         <img alt="" src="https://i.vimeocdn.com/video/91219950_1280x720" />
       </a>
     </td>
