fixed youtube link on demo

--- a/demo/index.html
+++ b/demo/index.html
@@ -128,12 +128,12 @@
       YouTube: (mode: iframe)
     </th>
     <td>
-      <a href="https://www.youtube.com/embed/Yds5jgqmYpE?autoplay=1" class="lightbox"
+      <a href="https://www.youtube.com/embed/RK1K2bCg4J8?autoplay=1" class="lightbox"
          data-type="iframe"
          data-group="iframe-youtube"
          data-width="1120px"
          data-height="630px">
-        <img alt="" src="https://img.youtube.com/vi/Yds5jgqmYpE/mqdefault.jpg" />
+        <img alt="" src="https://img.youtube.com/vi/RK1K2bCg4J8/mqdefault.jpg" />
       </a>
     </td>
   </tr>
