#104 fixed missing close button, also updated demo (bigger inline content)

--- a/demo/index.html
+++ b/demo/index.html
@@ -99,12 +99,27 @@
       <div style="display: none;">
         <div id="selector" data-group="iframe">
           Instrument cultivated alteration any favourable expression law far nor. Both new like tore but year.
-          An
-          from mean on with when sing pain. Oh to as principles devonshire companions unsatiable an
-          delightful. The
-          ourselves suffering the sincerity. Inhabit her manners adapted age certain. Debating offended at
-          branched
-          <a href="#">striking be subjects</a>.
+          An from mean on with when sing pain. Oh to as principles devonshire companions unsatiable an
+          delightful. The ourselves suffering the sincerity. Inhabit her manners adapted age certain. Debating
+          offended at branched <a href="#">striking be subjects</a>.
+          Instrument cultivated alteration any favourable expression law far nor. Both new like tore but year.
+          An from mean on with when sing pain. Oh to as principles devonshire companions unsatiable an
+          delightful. The ourselves suffering the sincerity. Inhabit her manners adapted age certain.
+          Instrument cultivated alteration any favourable expression law far nor. Both new like tore but year.
+          An from mean on with when sing pain. Oh to as principles devonshire companions unsatiable an
+          delightful. The ourselves suffering the sincerity. Inhabit her manners adapted age certain.
+          Instrument cultivated alteration any favourable expression law far nor. Both new like tore but year.
+          An from mean on with when sing pain. Oh to as principles devonshire companions unsatiable an
+          delightful. The ourselves suffering the sincerity. Inhabit her manners adapted age certain.
+          Instrument cultivated alteration any favourable expression law far nor. Both new like tore but year.
+          An from mean on with when sing pain. Oh to as principles devonshire companions unsatiable an
+          delightful. The ourselves suffering the sincerity. Inhabit her manners adapted age certain.
+          Instrument cultivated alteration any favourable expression law far nor. Both new like tore but year.
+          An from mean on with when sing pain. Oh to as principles devonshire companions unsatiable an
+          delightful. The ourselves suffering the sincerity. Inhabit her manners adapted age certain.
+          Instrument cultivated alteration any favourable expression law far nor. Both new like tore but year.
+          An from mean on with when sing pain. Oh to as principles devonshire companions unsatiable an
+          delightful. The ourselves suffering the sincerity. Inhabit her manners adapted age certain.
         </div>
       </div>
     </td>
