#107 - added support for audio element (stop on leave, autoplay), updated demo (added audio & local video)

--- a/demo/index.html
+++ b/demo/index.html
@@ -93,7 +93,7 @@
     </th>
     <td>
       <a href="?fallback_url" class="lightbox" data-type="html" data-target="#selector" data-group="inline">
-        Open
+        Text
       </a>
 
       <div style="display: none;">
@@ -120,6 +120,36 @@
           Instrument cultivated alteration any favourable expression law far nor. Both new like tore but year.
           An from mean on with when sing pain. Oh to as principles devonshire companions unsatiable an
           delightful. The ourselves suffering the sincerity. Inhabit her manners adapted age certain.
+        </div>
+      </div>
+
+      <br />
+
+      <a href="?fallback_url" class="lightbox" data-type="html" data-target="#selector_audio" data-group="inline_audio">
+        Audio
+      </a>
+
+      <div style="display: none;">
+        <div id="selector_audio" data-group="iframe">
+          <audio controls="" preload="none">
+            <source src="//upload.wikimedia.org/wikipedia/commons/transcoded/b/bb/Test_ogg_mp3_48kbps.wav/Test_ogg_mp3_48kbps.wav.mp3"
+                    type="audio/mpeg" />
+          </audio>
+        </div>
+      </div>
+
+      <br />
+
+      <a href="?fallback_url" class="lightbox" data-type="html" data-target="#selector_video" data-group="inline_video">
+        Video
+      </a>
+
+      <div style="display: none;">
+        <div style="margin:-10px -20px;background-color:black;" id="selector_video" data-group="iframe">
+
+          <video width="640" height="352" controls>
+            <source src="https://www.w3schools.com/html/mov_bbb.mp4" type="video/mp4">
+          </video>
         </div>
       </div>
     </td>
